--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -80,51 +80,49 @@
                     <br />
                     <div class="par">
                         <p>
-                            <a href="tel:134134"><b>134134</b></a>
+                            <a style="text-decoration: none; color:crimson;" href=" tel:134134 "><b>134134</b></a>
                             <br><br>
-                            <a href="tel:236587"><b>235687</b></a>
+                            <a style="text-decoration: none; color:crimson;" href="tel:236587 "><b>235687</b></a>
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="box">
-                <div class="card">
-                    <i class="fa fa-phone" aria-hidden="true "></i>
+            <div class="box ">
+                <div class="card ">
+                    <i class="fa fa-phone " aria-hidden="true "></i>
                     <h2>Custom Care</h2>
                     <br/>
-                    <div class="par">
+                    <div class="par ">
                         <p>
-                            <a href="tel:077-3760808"><b>077-3760808</b></a>
+                            <a style="text-decoration: none; color:crimson;" href=" tel:077-3760808 "><b>077-3760808</b></a>
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="box">
-                <div class="card">
-                    <i class="fa fa-location" aria-hidden="true "></i>
+            <div class="box ">
+                <div class="card ">
+                    <i class="fa fa-location " aria-hidden="true "></i>
                     <h2>Address</h2>
                     <br/>
-                    <div class="par">
+                    <div class="par ">
                         <p>
-                            <a href="map.html"><b>No. 3 Colombo Street</b></a>
+                            <a style="text-decoration: none; color:crimson; " href="map.html "><b>No. 3 Colombo Street</b></a>
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="box">
-                <div class="card">
-                    <i class="fa fa-ambulance" aria-hidden="true "></i>
+            <div class="box ">
+                <div class="card ">
+                    <i class="fa fa-ambulance " aria-hidden="true "></i>
                     <h2>Ambulance</h2>
-                    <br />
-                    <div class="par">
+                    <br/>
+                    <div class="par ">
                         <p>
-                            <a href="tel:+9411 543 1088-9" onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">
-                                <p class="call-button"><b>+9411 543 1088-9</b></p>
+                            <a style="text-decoration: none; color:crimson; " href="tel:+9411 543 1088-9 "><b>+9411 543 1088-9</b>
                             </a>
                             <br><br>
-                            <a href="tel:+9472 7111088" onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">
-                                <p class="call-button"><b>+9472 7111088</b></p>
-                            </a>
+                            <a style="text-decoration: none; color:crimson; " href="tel:+9472 7111088 "><b>+9472 7111088</b>
+                        </a>
                         </p>
                     </div>
                 </div>
@@ -136,7 +134,7 @@
                     <br />
                     <div class="par ">
                         <p>
-                            <b><a href="mailto: srihrtcntr@gmail.com ">srihrtcntr@gmail.com</b>
+                            <b><a style="text-decoration: none; color:crimson; " href="mailto: srihrtcntr@gmail.com ">srihrtcntr@gmail.com</b>
                             </a>
                         </p>
                     </div>
