--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -37,7 +37,7 @@
                             <li><a href="/LAB/index.html">Lab reports</a></li>
                             <li><a href="/pharmacy/pharmacy.html">Pharmacy</a></li>
                             <li><a href="payment.html">Payments</a></li>
-                            <li><a href="channel_Dr.html">Channeling</a></li>
+                            <li><a href="/FrontEnd/channel.html">Channeling</a></li>
                         </ul>
                     </div>
                 </li>
@@ -57,8 +57,8 @@
                     <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="docoty_signup.html">Doctor</a></li>
-                            <li><a href="patient_reg.html ">Patient</a></li>
+                            <li><a href="/FrontEnd/dr_signup.html">Doctor</a></li>
+                            <li><a href="/FrontEnd/patient_reg.html">Patient</a></li>
                         </ul>
                     </div>
                 </li>
@@ -134,7 +134,7 @@
                     <br />
                     <div class="par ">
                         <p>
-                            <b><a style="text-decoration: none; color:crimson; " href="mailto: srihrtcntr@gmail.com ">srihrtcntr@gmail.com</b>
+                            <b><a style="text-decoration: none; color:crimson;"href="mailto:srihrtcntr@gmail.com">srihrtcntr@gmail.com</b>
                             </a>
                         </p>
                     </div>
