--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -92,7 +92,7 @@
                 <div class="card-grp space">
                     <div class="card-item icon-relative">
                         <label class="label">Expiry Date:</label>
-                        <input type="text" name="expiry-data" class="input" name="expiry_date" placeholder="00 / 00" data-mask="00 / 00" />
+                        <input type="text" class="input" name="exp_date" placeholder="00 / 00" data-mask="00 / 00" />
                         <i class="far fa-calendar-alt"></i>
                     </div>
                     <div class="card-item icon-relative">
