--- a/frontEnd/About_us.html
+++ b/frontEnd/About_us.html
@@ -16,45 +16,45 @@
                 <li><a href="#">Home<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="login/login.html">Login</a></li>
-                            <li><a href="diseases/diseases.html">Diseases</a></li>
+                            <li><a href="/FrontEnd/login.html">Login</a></li>
+                            <li><a href="/FrontEnd/diseases.html">Diseases</a></li>
                         </ul>
                     </div>
 
 
                 </li>
                 <!--        ---------------------------------->
-                <li><a href="About_us/about_us.html">About us</a></li>
+                <li><a href="/FrontEnd/About_us.html">About us</a></li>
                 <!--        ==================---------------->
                 <li><a href="#">Services<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="doctor/doctor.html">Doctors</a></li>
-                            <li><a href="lab report/lab.html">Lab reports</a></li>
-                            <li><a href="pharmacy/pharmacy.html">Pharmacy</a></li>
-                            <li><a href="payments/payment.html">Payments</a></li>
-                            <li><a href="channeling_dr/channel_dr.html">Channeling</a></li>
+                            <li><a href="/FrontEnd/doctor.html">Doctors</a></li>
+                            <li><a href="/LAB/index.html">Lab reports</a></li>
+                            <li><a href="/pharmacy/pharmacy.html">Pharmacy</a></li>
+                            <li><a href="/FrontEnd/payment.html">Payments</a></li>
+                            <li><a href="/FrontEnd/channel.html">Channeling</a></li>
                         </ul>
                     </div>
                 </li>
                 <!--        ========================-->
-                <li><a href="contact/contact.html">Contact us</a>
+                <li><a href="/FrontEnd/contact.html">Contact us</a>
                 </li>
                 <!------------------------>
 
                 <li>
-                    <a href="Feedback 01/feedback.html">Feedback</a></li>
+                    <a href="/FEED_BACK/1.html">Feedback</a></li>
 
                 <!---------------------->
-                <li><a href=" map/map.html ">Location</a>
+                <li><a href="/FrontEnd/map.html">Location</a>
                 </li>
 
                 <!--        --------------->
                 <li><a href="# ">Sign up<i class="fas fa-caret-down "></i></a>
                     <div class="dropdown-menu ">
                         <ul>
-                            <li><a href="dr_signup/dr_signup.html ">Doctor</a></li>
-                            <li><a href="patient_signup/patient_reg.html ">Patient</a></li>
+                            <li><a href="/FrontEnd/dr_signup.html">Doctor</a></li>
+                            <li><a href="/FrontEnd/patient_reg.html">Patient</a></li>
 
                         </ul>
                     </div>
