--- a/FrontEnd/doctor.html
+++ b/FrontEnd/doctor.html
@@ -38,23 +38,23 @@
                 </div>
             </li>
             <!--        ========================-->
-            <li><a href="./FrontEnd/contact.html">Contact us</a></li>
+            <li><a href="/FrontEnd/contact.html">Contact us</a></li>
             <!------------------------>
 
             <li>
-                <a href="./FEED_BACK/1.html ">Feedback</a>
+                <a href="/FEED_BACK/1.html">Feedback</a>
             </li>
 
             <!---------------------->
-            <li><a href="./FrontEnd/map.html ">Location</a></li>
+            <li><a href="/FrontEnd/map.html">Location</a></li>
 
             <!--        --------------->
             <li>
                 <a href="# ">Sign up<i class="fas fa-caret-down "></i></a>
                 <div class="dropdown-menu ">
                     <ul>
-                        <li><a href="./FrontEnd/doctor_signup.html ">Doctor</a></li>
-                        <li><a href="./FrontEnd/patient_reg.html ">Patient</a></li>
+                        <li><a href="/FrontEnd/doctor_signup.html">Doctor</a></li>
+                        <li><a href="/FrontEnd/patient_reg.html">Patient</a></li>
                     </ul>
                 </div>
             </li>
