--- a/frontEnd/patient_reg.html
+++ b/frontEnd/patient_reg.html
@@ -77,75 +77,63 @@
     <script type="text/javascript">
         //form validation code will come here
         function validation()
-           
+
         {
-            if(document.reg_form.f_name.value=="")
-            {
+            if (document.reg_form.f_name.value == "") {
                 alert("Please provide your First Name");
                 document.reg_form.f_name.focus();
                 return false;
             }
-            if(document.reg_form.l_name.value=="")
-            {
+            if (document.reg_form.l_name.value == "") {
                 alert("Please provide your Last Name");
                 document.reg_form.l_name.focus();
                 return false;
             }
-            if(document.reg_form.u_name.value=="")
-            {
+            if (document.reg_form.u_name.value == "") {
                 alert("Please provide your User Name");
                 document.reg_form.u_name.focus();
                 return false;
             }
-            if(document.reg_form.nic.value=="")
-            {
+            if (document.reg_form.nic.value == "") {
                 alert("Please provide your NIC");
                 document.reg_form.nic.focus();
                 return false;
             }
-            if(document.reg_form.gender.value=="")
-            {
+            if (document.reg_form.gender.value == "") {
                 alert("Please provide your Gender");
                 document.reg_form.gender.focus();
                 return false;
             }
-            if(document.reg_form.blood_grp.value=="")
-            {
+            if (document.reg_form.blood_grp.value == "") {
                 alert("Please provide your Blood Group");
                 document.reg_form.blood_grp.focus();
                 return false;
             }
-            if(document.reg_form.dob.value=="")
-            {
+            if (document.reg_form.dob.value == "") {
                 alert("Please provide your Date Of Birth");
                 document.reg_form.dob.focus();
                 return false;
             }
-            if(document.reg_form.email.value=="")
-            {
+            if (document.reg_form.email.value == "") {
                 alert("Please provide your Email");
                 document.reg_form.email.focus();
                 return false;
             }
-            if(document.reg_form.pwd.value=="")
-            {
+            if (document.reg_form.pwd.value == "") {
                 alert("Please provide your Password");
                 document.reg_form.pwd.focus();
                 return false;
             }
-            if(document.reg_form.pwd-repeat.value=="")
-            {
+            if (document.reg_form.pwd - repeat.value == "") {
                 alert("Please provide your Confirm Password");
-                document.reg_form.pwd-repeat.focus();
+                document.reg_form.pwd - repeat.focus();
                 return false;
             }
-            if(document.reg_form.phn_no.value=="")
-            {
+            if (document.reg_form.phn_no.value == "") {
                 alert("Please provide your Phone Number");
                 document.reg_form.phn_no.focus();
                 return false;
             }
-            else
         }
     </script>
 </head>
@@ -178,7 +166,7 @@
                 <div class="category"></div>
                 <input type="radio" id="gender" name="gender" value="Female">Female</label>
                 <g>
-                <input type="radio" id="gender" name="gender" value="Male">Male</label><br>
+                    <input type="radio" id="gender" name="gender" value="Male">Male</label><br>
             </div>
 
 
