--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -23,13 +23,13 @@
                     <a href="# ">Home<i class="fas fa-caret-down "></i></a>
                     <div class="dropdown-menu ">
                         <ul>
-                            <li><a href="login.html ">Login</a></li>
+                            <li><a href="login.html">Login</a></li>
                             <li><a href="diseases.html">Diseases</a></li>
                         </ul>
                     </div>
                 </li>
                 <!--        ---------------------------------->
-                <li><a href="about_us.html ">About us</a></li>
+                <li><a href="about_us.html">About us</a></li>
                 <!--        ==================---------------->
                 <li>
                     <a href="# ">Services<i class="fas fa-caret-down "></i></a>
@@ -52,14 +52,14 @@
                 </li>
 
                 <!---------------------->
-                <li><a href="map.html ">Location</a></li>
+                <li><a href="map.html">Location</a></li>
 
                 <!--        --------------->
                 <li>
                     <a href="# ">Sign up<i class="fas fa-caret-down "></i></a>
                     <div class="dropdown-menu ">
                         <ul>
-                            <li><a href="doctor_signup.html ">Doctor</a></li>
+                            <li><a href="dr_signup.html">Doctor</a></li>
                             <li><a href="patient_reg.html ">Patient</a></li>
                         </ul>
                     </div>
@@ -89,7 +89,7 @@
             <br><br>
             <input type="submit" name="" value="LOGIN " onclick="validate()">
             <br><br><br>
-            <a href="patient_reg.html " class="btn ">Not Registered Sign Up</a>
+            <a href="patient_reg.html" class="btn ">Not Registered Sign Up</a>
     </div>
     </center>
     <div>
