--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>payment</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" />
-    <link rel="stylesheet" href="/CSS/payment.css">
+    <link rel="stylesheet" href="../CSS/payment.css">
     <link rel="text/javascript" href="/JS/payment.js">
 </head>
 
@@ -45,7 +45,7 @@
                     </div>
                 </li>
                 <!--        ========================-->
-                <li><a href=" contact.html ">Contact us</a></li>
+                <li><a href="contact.html">Contact us</a></li>
                 <!------------------------>
 
                 <li>
@@ -78,7 +78,7 @@
             </div>
 
             <h2>PAY HERE</h2>
-            <div class="form" action="/PHP/payment.php">
+            <div class="form" action="/PHP/payment.php" method="POST">
                 <div class="card space icon-relative">
                     <label class="label">Card Holder Name:</label>
                     <input type="text" class="input" name="card_holder" placeholder="Insert name" />
@@ -101,7 +101,7 @@
                         <i class="fas fa-lock"></i>
                     </div>
                 </div>
-                <a style="text-decoration: none;" href="/index.html">
+                <a style="text-decoration: none;" href="../index.html">
                     <div class="btn">Proceed To Pay</div>
                 </a>
                 <br>
