--- a/frontEnd/About_us.html
+++ b/frontEnd/About_us.html
@@ -16,8 +16,8 @@
                 <li><a href="#">Home<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="/FrontEnd/login.html">Login</a></li>
-                            <li><a href="/FrontEnd/diseases.html">Diseases</a></li>
+                            <li><a href="../FrontEnd/login.html">Login</a></li>
+                            <li><a href="../FrontEnd/diseases.html">Diseases</a></li>
                         </ul>
                     </div>
 
@@ -29,32 +29,32 @@
                 <li><a href="#">Services<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="/FrontEnd/doctor.html">Doctors</a></li>
-                            <li><a href="/LAB/index.html">Lab reports</a></li>
-                            <li><a href="/pharmacy/pharmacy.html">Pharmacy</a></li>
-                            <li><a href="/FrontEnd/payment.html">Payments</a></li>
-                            <li><a href="/FrontEnd/channel.html">Channeling</a></li>
+                            <li><a href="../FrontEnd/doctor.html">Doctors</a></li>
+                            <li><a href="../LAB/index.html">Lab reports</a></li>
+                            <li><a href="../pharmacy/pharmacy.html">Pharmacy</a></li>
+                            <li><a href="../FrontEnd/payment.html">Payments</a></li>
+                            <li><a href="../FrontEnd/channel.html">Channeling</a></li>
                         </ul>
                     </div>
                 </li>
                 <!--        ========================-->
-                <li><a href="/FrontEnd/contact.html">Contact us</a>
+                <li><a href="../FrontEnd/contact.html">Contact us</a>
                 </li>
                 <!------------------------>
 
                 <li>
-                    <a href="/FEED_BACK/1.html">Feedback</a></li>
+                    <a href="../FEED_BACK/1.html">Feedback</a></li>
 
                 <!---------------------->
-                <li><a href="/FrontEnd/map.html">Location</a>
+                <li><a href="../FrontEnd/map.html">Location</a>
                 </li>
 
                 <!--        --------------->
                 <li><a href="# ">Sign up<i class="fas fa-caret-down "></i></a>
                     <div class="dropdown-menu ">
                         <ul>
-                            <li><a href="/FrontEnd/dr_signup.html">Doctor</a></li>
-                            <li><a href="/FrontEnd/patient_reg.html">Patient</a></li>
+                            <li><a href="../FrontEnd/dr_signup.html">Doctor</a></li>
+                            <li><a href="../FrontEnd/patient_reg.html">Patient</a></li>
 
                         </ul>
                     </div>
