--- a/FrontEnd/doctor.html
+++ b/FrontEnd/doctor.html
@@ -54,7 +54,7 @@
                 <div class="dropdown-menu ">
                     <ul>
                         <li><a href="./FrontEnd/doctor_signup.html ">Doctor</a></li>
-                        <li><a href="./FrontEnd/patient_reg.html ">Patient</a></li>
+                        <li><a href="/FrontEnd/patient_reg.html">Patient</a></li>
                     </ul>
                 </div>
             </li>
