--- a/frontEnd/channel.html
+++ b/frontEnd/channel.html
@@ -172,7 +172,7 @@ button:hover {
     <div><p>Search for a Doctor? <a href="/FrontEnd/doctor.html"> Search</a></p></div>
 
 
-    <p>You will get the appointment details via sms  whithin 1h.<br>or <a href="/FrontEnd/index.html">Back</a></p>
+    <p>You will get the appointment details via sms  whithin 1h.<br>or <a href="/index.html">Back</a></p>
 </form>
 </div>
 
