--- a/FrontEnd/doctor.html
+++ b/FrontEnd/doctor.html
@@ -33,7 +33,7 @@
                         <li><a href="/LAB/index.html">Lab reports</a></li>
                         <li><a href="/pharmacy/pharmacy.html">Pharmacy</a></li>
                         <li><a href="payment.html">Payments</a></li>
-                        <li><a href="channel_Dr.html">Channeling</a></li>
+                        <li><a href="/FrontEnd/channel.html">Channeling</a></li>
                     </ul>
                 </div>
             </li>
