--- a/pharmacy/pharmacy.html
+++ b/pharmacy/pharmacy.html
@@ -21,35 +21,34 @@
                     </ul>
                 </div>
             </li>
-            <li><a href="# ">About Us</a></li>
+            <li><a href="/FrontEnd/About_us.html">About Us</a></li>
             <li>
                 <a href="# ">Services<i class="fas fa-caret-down"></i></a>
                 <div class="dropdown-menu">
                     <ul>
                         <li><a href="/FrontEnd/doctor.html">Doctors</a></li>
-                        <li><a href="/LAB/index.html ">Lab reports</a></li>
-                        <li><a href="/pharmacy/pharmacy.html ">Pharmacy</a></li>
-                        <li><a href="/FrontEnd/payment.html ">Payments</a></li>
-                        <li><a href="# ">Channeling</a></li>
+                        <li><a href="/LAB/index.html">Lab reports</a></li>
+                        <li><a href="/pharmacy/pharmacy.html">Pharmacy</a></li>
+                        <li><a href="/FrontEnd/payment.html">Payments</a></li>
+                        <li><a href="/FrontEnd/channel.html">Channeling</a></li>
                     </ul>
                 </div>
             </li>
             <li>
-                <a href="/FrontEnd/contact.html ">Contact us<i class="fas fa-caret-down"></i></a>
+                <a href="/FrontEnd/contact.html">Contact us</a>
             </li>
 
             <li>
-                <a href="/FEED_BACK/1.html ">Feedback<i class="fas fa-caret-down"></i
-            ></a>
+                <a href="/FEED_BACK/1.html">Feedback</a>
             </li>
 
-            <li><a href="/FrontEnd/map.html ">Location</a></li>
+            <li><a href="/FrontEnd/map.html">Location</a></li>
             <li>
-                <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
+                <a href="#">Sign up<i class="fas fa-caret-down"></i></a>
                 <div class="dropdown-menu">
                     <ul>
-                        <li><a href="# ">Doctor</a></li>
-                        <li><a href="# ">Patient</a></li>
+                        <li><a href="/FrontEnd/dr_signup.html">Doctor</a></li>
+                        <li><a href="/FrontEnd/patient_reg.html">Patient</a></li>
                     </ul>
                 </div>
             </li>
