--- a/frontEnd/channel.html
+++ b/frontEnd/channel.html
@@ -167,7 +167,7 @@ button:hover {
     <input type="date" id="any_date" name="any_date">
     
     <br><br>
-    <button type="submit">Enter</button>
+    <button type="submit">Enter<a href="/index.html"></a></button>
     
     <div><p>Search for a Doctor? <a href="/FrontEnd/doctor.html"> Search</a></p></div>
 
