--- a/terms and conditions/term.html
+++ b/terms and conditions/term.html
@@ -77,12 +77,15 @@
             <p><b>Copyright ©2022 All rights reserved | Made by Team Medical Capstone</b></p>
 
 
-            <h4>I Agree To The <span> Terms And Conditions</span> And I Read The Privacy Notice</h4>
-            <div class="buttons">
-                <button class="btn red-btn">Accept</button>
-                <button class="btn gray-btn">Decline</button>
-            </div>
+            <h4>I Agree To The Terms And Conditions And I Read The Privacy Notice</h4>
 
+            <center>
+                <div class="button">
+                    <a style="text-decoration: none;" href="../index.html">
+                        <button class="btn red-btn">I Agree To The Terms And Conditions</button>
+                    </a>
+                </div>
+            </center>
         </div>
     </div>
 </body>
