--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -78,7 +78,7 @@
             </div>
 
             <h2>PAY HERE</h2>
-            <div class="form" action="../PHP/payment.php" method="post" name="payment_table" onsubmit="return validate()">
+            <div class="form" action="../PHP/payment.php" method="post">
                 <div class="card space icon-relative ">
                     <label class="label ">Card Holder Name:</label>
                     <input type="text " class="input" name="card_holder" placeholder="Insert name " />
@@ -101,7 +101,9 @@
                         <i class="fas fa-lock "></i>
                     </div>
                 </div>
-                <div class="btn">Proceed To Pay</div>
+                <a href="index.html" style="text-decoration: none;">
+                    <div class="btn">Proceed To Pay</div>
+                </a>
                 <br>
             </div>
             </form>
