--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -101,7 +101,7 @@
                         <i class="fas fa-lock "></i>
                     </div>
                 </div>
-                <a href="index.html" style="text-decoration: none;">
+                <a href="/index.html" style="text-decoration: none;">
                     <div class="btn">Proceed To Pay</div>
                 </a>
                 <br>
