--- a/FrontEnd/popup.html
+++ b/FrontEnd/popup.html
@@ -14,8 +14,13 @@
         <button type="submit" class="btn" onclick="openPopup()">Submit</button>
         <div class="popup" id="popup">
             <img src="/Images/popup.png" />
-            <h2>Thank You!</h2>
-            <p>Your payment has been successfully received.THANK YOU!</p>
+            <br /><br />
+            <b>
+          <h2>Thank You!</h2>
+          <br /><br />
+          <p>
+            Your payment has been successfully received. <br /><br />THANKS!
+          </p></b>
             <a href="/index.html"><button type="button" onclick="closePopup()">OK</button>
         </a>
         </div>
