--- a/pharmacy/pharmacy.html
+++ b/pharmacy/pharmacy.html
@@ -59,11 +59,11 @@
 
 <body>
     <div class="contact-box">
-        <form action="add.php " method="post ">
+        <form action="../pharmacy/add.php" method="post" name="pharmacy_table">
             <h1>PHARMACY</h1>
 
-            <input type="text " class="input-field" placeholder="User Name " name="user_name " />
-            <input type="text " class="input-field" name="medicine_name " placeholder="Medicine Name " />
+            <input type="text " class="input-field" placeholder="User Name " name="username" />
+            <input type="text " class="input-field" name="medicine_name" placeholder="Medicine Name " />
 
             <button type="submit " class="btn" value="SUBMIT ">
           Check Availability
