--- a/frontEnd/patient_reg.html
+++ b/frontEnd/patient_reg.html
@@ -124,9 +124,9 @@
                 document.reg_form.pwd.focus();
                 return false;
             }
-            if (document.reg_form.pwd-repeat.value == "") {
+            if (document.reg_form.pwd - repeat.value == "") {
                 alert("Please provide your Confirm Password");
-                document.reg_form.pwd-repeat.focus();
+                document.reg_form.pwd - repeat.focus();
                 return false;
             }
             if (document.reg_form.phn_no.value == "") {
@@ -135,16 +135,13 @@
                 return false;
             }
         }
-        
-
-       
     </script>
 </head>
 
 <body>
 
 
-    <form action="../PHP/connect3.php" method="post"  name="reg_form" onsubmit="return validation()">
+    <form action="../PHP/connect3.php" method="post" name="reg_form" onsubmit="return validation()">
 
         <div class="container">
             <h1>Register</h1>
@@ -181,7 +178,7 @@
 
 
             <label for="email"><b>Email :</b></label>
-            <input type="text" placeholder="example@mail.com" name="email" id="email"/>
+            <input type="text" placeholder="example@mail.com" name="email" id="email" />
 
             <label for="pwd"><b>Password :</b></label>
             <input type="password" placeholder="Enter Password" name="pwd" id="pwd" />
@@ -191,7 +188,7 @@
             </div>
 
             <label for="pwd_repeat"><b>Confirm Password :</b></label>
-            <input type="password" placeholder="Confirm Password" name="pwd_repeat" id="pwd_repeat"/>
+            <input type="password" placeholder="Confirm Password" name="pwd_repeat" id="pwd_repeat" />
 
             <div class="card-box">
                 <span class="details"><b> Phone number :</b> </span>
@@ -203,7 +200,7 @@
         <!-- wrapping the text inside the p tag with a tag for routing to the login page URL-->
         <!-- the # must ideally be replaced by the login page URL -->
         <div>
-            <p>Already have an account? <a href="../FrontEnd/login.html">Log in</a><br><br>or <a href="/index.html">Go Back</a></p>
+            <p>Already have an account? <a href="../FrontEnd/login.html" style="text-decoration:none">Log in</a><br><br>or <a href="../index.html" style="text-decoration:none">Return to main page</a></p>
         </div>
     </form>
 
