--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -78,7 +78,7 @@
             </div>
 
             <h2>PAY HERE</h2>
-            <div class="form" action="../PHP/payment.php" method="post">
+            <div class="form" action="../PHP/payment.php" method="post" name="payment_table">
                 <div class="card space icon-relative ">
                     <label class="label ">Card Holder Name:</label>
                     <input type="text " class="input" name="card_holder" placeholder="Insert name " />
