--- a/frontEnd/patient_reg.html
+++ b/frontEnd/patient_reg.html
@@ -203,7 +203,7 @@
         <!-- wrapping the text inside the p tag with a tag for routing to the login page URL-->
         <!-- the # must ideally be replaced by the login page URL -->
         <div>
-            <p>Already have an account? <a href="../FrontEnd/login.html">Log in</a><br><br>or <a href="/index.html">Go Back</a></p>
+            <p>Already have an account? <a href="../FrontEnd/login.html" style="text-decoration: none;">Log in</a><br><br>or <a href="/index.html" style="text-decoration: none;" >Go Back</a></p>
         </div>
     </form>
 
@@ -211,18 +211,3 @@
 
 </html>
 
-<!---const form=document.querySelector("form"),
-               btn=form.querySelector(".btn")
-               allinput=form.querySelector(".first input");
-
-        btn.addEventListener("click",()=>{
-            allinput.forEach(input =>{
-                if(input.value!=""){
-                    form.tagName.add('secActive');
-                }else{
-                    form.tagName.add('secAdtive');
-                }
-            })
-
-
-        } )   -->
