--- a/FrontEnd/doctor.html
+++ b/FrontEnd/doctor.html
@@ -53,7 +53,7 @@
                 <a href="# ">Sign up<i class="fas fa-caret-down "></i></a>
                 <div class="dropdown-menu ">
                     <ul>
-                        <li><a href="./FrontEnd/doctor_signup.html ">Doctor</a></li>
+                        <li><a href="../FrontEnd/dr_signup.html">Doctor</a></li>
                         <li><a href="/FrontEnd/patient_reg.html">Patient</a></li>
                     </ul>
                 </div>
