--- a/frontEnd/channel.html
+++ b/frontEnd/channel.html
@@ -127,7 +127,7 @@ button:hover {
 <div class="bg-text">
 <h1><b>Meet Your Doctor</b></h1>
  
-<form action="/PHP/connect1.php" method="post" name="channel_form" onsubmit="return validate()">
+<form action="../PHP/channel.php" method="post" name="channel_form" onsubmit="return validate()">
     
     <p>Doctor Name:</p> 
     <select name="Name" id="doctor_name"  placeholder="Select Doctor Name ">
@@ -169,7 +169,7 @@ button:hover {
     <br><br>
     <button type="submit">Enter<a href="/index.html"></a></button>
     
-    <div><p>Search for a Doctor? <a href="/FrontEnd/doctor.html"> Search</a></p></div>
+    <div><p>Search for a Doctor? <a href="../FrontEnd/doctor.html"> Search</a></p></div>
 
 
     <p>You will get the appointment details via sms  whithin 1h.<br>or <a href="/index.html">Back</a></p>
