--- a/frontEnd/dr_signup.html
+++ b/frontEnd/dr_signup.html
@@ -119,7 +119,7 @@
     <div class="bg-text">
         <h1><b>Doctor Signup</b></h1><br><br>
 
-        <form action="../PHP/connect2.php" method="post" name="dr_signup" onsubmit="return validate()">
+        <form action="../PHP/dr_signup.php" method="post" name="dr_signup" onsubmit="return validate()">
 
             <p>Doctor Name:</p>
             <input type="text" id="doctor_name" name="Name" placeholder=""><br>
