--- a/frontEnd/patient_reg.html
+++ b/frontEnd/patient_reg.html
@@ -144,7 +144,7 @@
 <body>
 
 
-    <form action="../PHP/connect3.php" method="post"  name="reg_form" onsubmit="return validation()">
+    <form action="../PHP/patient_reg.php" method="post"  name="reg_form" onsubmit="return validation()">
 
         <div class="container">
             <h1>Register</h1>
