--- a/FrontEnd/doctor3.html
+++ b/FrontEnd/doctor3.html
@@ -56,8 +56,8 @@
                     <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="doctor_signup.html">Doctor</a></li>
-                            <li><a href="patient_reg.html ">Patient</a></li>
+                            <li><a href="/FrontEnd/dr_signup.html">Doctor</a></li>
+                            <li><a href="/FrontEnd/patient_reg.html">Patient</a></li>
                         </ul>
                     </div>
                 </li>
