--- a/frontEnd/channel.html
+++ b/frontEnd/channel.html
@@ -23,7 +23,7 @@ h1{
 
 .bg-image {
   /* The image used */
-  background-image: url("/images/channeling_image.jpg");
+  background-image: url("../images/channeling_image.jpg");
   
   /* Add the blur effect */
   filter: blur(8px);
@@ -169,10 +169,10 @@ button:hover {
     <br><br>
     <button type="submit">Enter<a href="/index.html"></a></button>
     
-    <div><p>Search for a Doctor? <a href="../FrontEnd/doctor.html"> Search</a></p></div>
+    <div><p>Search for a Doctor? <a href="../FrontEnd/doctor.html" style="text-decoration: none; color: rgb(61, 47, 215);">Search</a></p></div>
 
 
-    <p>You will get the appointment details via sms  whithin 1h.<br>or <a href="/index.html">Back</a></p>
+    <p>You will get the appointment details via sms  whithin 1h.<br>or <a href="/index.html" style="text-decoration: none; color: rgb(137, 10, 149)";>Back</a></p>
 </form>
 </div>
 
