--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -89,7 +89,7 @@
             <br><br>
             <input type="submit" name="" value="LOGIN " onclick="validate()">
             <br><br><br>
-            <a href="patient_reg.html" class="btn ">Not Registered Sign Up</a><br>or <a href="/index.html"> Go Back</a>
+            <a href="patient_reg.html" class="btn " style="text-decoration: none;">Not Registered Sign Up</a>
     </div>
     </center>
     <div>
