--- a/FrontEnd/popup.html
+++ b/FrontEnd/popup.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>popup message</title>
-    <link rel="stylesheet" href="/CSS/popup.css" />
+    <link rel="stylesheet" href="../CSS/popup.css" />
 </head>
 
 <body>
     <div class="container">
         <button type="submit" class="btn" onclick="openPopup()">Submit</button>
         <div class="popup" id="popup">
-            <img src="/Images/popup.png" />
+            <img src="../Images/popup.png" />
             <br /><br />
             <b>
           <h2>Thank You!</h2>
@@ -21,7 +21,7 @@
           <p>
             Your payment has been successfully received. <br /><br />THANKS!
           </p></b>
-            <a href="/index.html"><button type="button" onclick="closePopup()">OK</button>
+            <a href="../index.html"><button type="button" onclick="closePopup()">OK</button>
         </a>
         </div>
     </div>
