--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -46,7 +46,7 @@
                 <!------------------------>
 
                 <li>
-                    <a href="/FEED_BACK/1.html">Feedback</a>
+                    <a href="../FEED_BACK/1.html">Feedback</a>
                 </li>
 
                 <!---------------------->
