--- a/frontEnd/channel.html
+++ b/frontEnd/channel.html
@@ -172,7 +172,7 @@ button:hover {
     <div><p>Search for a Doctor? <a href="../FrontEnd/doctor.html" style="text-decoration: none; color: rgb(61, 47, 215);">Search</a></p></div>
 
 
-    <p>You will get the appointment details via sms  whithin 1h.<br>or <a href="/index.html" style="text-decoration: none; color: rgb(137, 10, 149)";>Back</a></p>
+    <p>You will get the appointment details via sms  within 1h.<br>or <a href="../index.html" style="text-decoration: none; color: rgb(137, 10, 149)";>Back</a></p>
 </form>
 </div>
 
