--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -34,10 +34,10 @@
                     <div class="dropdown-menu">
                         <ul>
                             <li><a href="doctor.html">Doctors</a></li>
-                            <li><a href="/LAB/index.html">Lab reports</a></li>
-                            <li><a href="/pharmacy/pharmacy.html">Pharmacy</a></li>
+                            <li><a href="../LAB/index.html">Lab reports</a></li>
+                            <li><a href="../pharmacy/pharmacy.html">Pharmacy</a></li>
                             <li><a href="payment.html">Payments</a></li>
-                            <li><a href="/FrontEnd/channel.html">Channeling</a></li>
+                            <li><a href="../FrontEnd/channel.html">Channeling</a></li>
                         </ul>
                     </div>
                 </li>
@@ -54,11 +54,11 @@
 
                 <!--        --------------->
                 <li>
-                    <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
+                    <a href="#">Sign up<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="/FrontEnd/dr_signup.html">Doctor</a></li>
-                            <li><a href="/FrontEnd/patient_reg.html">Patient</a></li>
+                            <li><a href="../FrontEnd/dr_signup.html">Doctor</a></li>
+                            <li><a href="../FrontEnd/patient_reg.html">Patient</a></li>
                         </ul>
                     </div>
                 </li>
