--- a/terms and conditions/term.html
+++ b/terms and conditions/term.html
@@ -82,7 +82,7 @@
             <center>
                 <div class="button">
                     <a style="text-decoration: none;" href="../index.html">
-                        <button class="btn red-btn">I Agree To The Terms And Conditions</button>
+                        <button class="btn">I Agree To The Terms And Conditions</button>
                     </a>
                 </div>
             </center>
