--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#about">About</a>
             <a href="#services">Heart diseases</a>
             <a href="#location">Location</a>
-            <a href="#login">Login</a>
+            <a href="login.php">Login</a>
             <a href="signup.php">Register</a>
         </nav>
         <div id="menu-btn" class="fa fa-bars"></div>
@@ -195,9 +195,9 @@
 
             <div class="box">
                 <h3>our services</h3>
-                <a href="#login"> <i class="fas fa-chevron-right"></i> doctors </a>
+                <a href="#home"> <i class="fas fa-chevron-right"></i> doctors </a>
                 <a href="mailto:srihrtcntr@gmail.com"> <i class="fas fa-chevron-right"></i> message us </a>
-                <a href="#login"> <i class="fas fa-chevron-right"></i> Appointments </a>
+                <a href="#home"> <i class="fas fa-chevron-right"></i> Appointments </a>
                 <a href="tel:+9485 6890284"> <i class="fas fa-chevron-right"></i> ambulance service </a>
             </div>
 
