--- a/index.html
+++ b/index.html
@@ -180,7 +180,6 @@
     <!--location section ends here-->
 
     <!-- footer section starts -->
-
     <section class="footer">
 
         <div class="box-container">
@@ -188,7 +187,7 @@
             <div class="box">
                 <h3>quick links</h3>
                 <a href="#home"> <i class="fas fa-chevron-right"></i> home </a>
-                <a href="about.php"> <i class="fas fa-chevron-right"></i> about </a>
+                <a href="#about"> <i class="fas fa-chevron-right"></i> about </a>
                 <a href="#services"> <i class="fas fa-chevron-right"></i> heart diseases </a>
                 <a href="#location"> <i class="fas fa-chevron-right"></i> location </a>
             </div>
@@ -206,7 +205,7 @@
                 <a href="tel:+9411 543 1088-9"> <i class="fas fa-phone"></i> +9411 543 1088-9 </a>
                 <a href="tel:+9472 7111088"> <i class="fas fa-phone"></i> +9472 7111088 </a>
                 <a href="mailto:srihrtcntr@gmail.com"> <i class="fas fa-envelope"></i> srihrtcntr@gmail.com </a>
-                <a href="map.php"> <i class="fas fa-map-marker-alt"></i> Colombo 3, Sri Lanka </a>
+                <a href="#location"> <i class="fas fa-map-marker-alt"></i> Colombo 3, Sri Lanka </a>
             </div>
 
             <div class="box">
@@ -223,7 +222,6 @@
         <div class="credit"> created by <span>Team Medical Capstone</span> | all rights reserved </div>
 
     </section>
-
     <!-- footer section ends -->
 </body>
 
